--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.1
   google_fonts: ^2.1.0
+  provider: ^6.0.1
+  url_launcher: ^6.0.12
 
 
   # The following adds the Cupertino Icons font to your application.
