--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/splashscreen.png
+    - assets/images/home_icon.png
+    - assets/images/booking_icon.png
+    - assets/images/chat_icon.png
+    - assets/images/profil_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
