--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  currency_text_input_formatter: ^2.1.4
   google_fonts: ^2.1.0
   intl: ^0.17.0
   provider: ^6.0.1
