--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   currency_text_input_formatter: ^2.1.4
+  equatable: ^2.0.3
   google_fonts: ^2.1.0
   intl: ^0.17.0
   provider: ^6.0.1
