--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.1
   url_launcher: ^6.0.12
+  webview_flutter: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
