--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   equatable: ^2.0.3
   google_fonts: ^2.1.0
   http: ^0.13.4
+  image_picker: ^0.8.4+2
   intl: ^0.17.0
   provider: ^6.0.1
   url_launcher: ^6.0.12
