--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^0.8.4+2
   intl: ^0.17.0
   provider: ^6.0.1
+  timeago: ^3.1.0
   url_launcher: ^6.0.12
   webview_flutter: ^2.1.1
 
