--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rentalku">
    <uses-permission android:name="android.permission.INTERNET" />
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+   <uses-feature android:name="android.hardware.location.network" android:required="false" />
+   <uses-feature android:name="android.hardware.location.gps" android:required="false"  />
    <application
         android:usesCleartextTraffic="true"
         android:label="rentalku"
         android:icon="@mipmap/ic_launcher">
+       <meta-data
+           android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyCvSTcZAbK5z7GMtWQ3z-BJGJwB_EerVvQ"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
