--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   collapsible: ^1.0.0
   currency_text_input_formatter: ^2.1.4
   equatable: ^2.0.3
+  geocoding: ^2.0.1
   google_fonts: ^2.1.0
+  google_maps_flutter: ^2.0.11
   http: ^0.13.4
   image_picker: ^0.8.4+2
   intl: ^0.17.0
+  location: ^4.3.0
   provider: ^6.0.1
   timeago: ^3.1.0
   url_launcher: ^6.0.12
