--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,10 @@ dependencies:
   timeago: ^3.1.0
   url_launcher: ^6.0.12
   webview_flutter: ^2.1.1
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.9
 
 dev_dependencies:
   flutter_test:
